--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gparted (1.5.0-1deepin0) unstable; urgency=medium
+
+  * No source change upload against GCC 12.
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Thu, 19 Sep 2024 22:48:43 +0800
+
 gparted (1.5.0-1) unstable; urgency=medium
 
   * Fix the watch file
